--- a/Capex.Web/Capex.Web/Views/GestionDesarrollo/Index.cshtml
+++ b/Capex.Web/Capex.Web/Views/GestionDesarrollo/Index.cshtml
@@ -229,7 +229,7 @@
                         <div class="card-body">
                             <div class="card-title mb-3">
                                 <div class="d-inline-block ml-2">
-                                    <h6 class="page-title">En Desarrollo</h6><div id="iconFilter"></div>
+                                    <h6 class="page-title">En Desarrollo @ViewBag.TituloOpcionSeleccionada</h6><div id="iconFilter"></div>
                                 </div>
                             </div>
                             <!--CONTENEDOR PANEL LATERAL ESTADOS-->
