--- a/Capex.Web/Capex.Web/Views/GestionResumen/Index.cshtml
+++ b/Capex.Web/Capex.Web/Views/GestionResumen/Index.cshtml
@@ -394,7 +394,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-12">
                     <div class="card mail-inbox">
@@ -422,7 +421,7 @@
                         <div class="card-body">
                             <div class="card-title mb-3">
                                 <div class="d-inline-block ml-2">
-                                    <h6>Resumen de Inicitivas</h6><div id="iconFilter"></div>
+                                    <h6>Resumen de Inicitivas @ViewBag.TituloOpcionSeleccionada</h6><div id="iconFilter"></div>
                                 </div>
                             </div>
                             <!--CONTENEDOR PANEL LATERAL ESTADOS-->
