--- a/Capex.Web/Capex.Web/Views/GestionComentada/Index.cshtml
+++ b/Capex.Web/Capex.Web/Views/GestionComentada/Index.cshtml
@@ -239,7 +239,7 @@
                         <div class="card-body">
                             <div class="card-title mb-3">
                                 <div class="d-inline-block ml-2">
-                                    <h6>Observadas</h6><div id="iconFilter"></div>
+                                    <h6>Observadas @ViewBag.TituloOpcionSeleccionada</h6><div id="iconFilter"></div>
                                 </div>
                             </div>
                             <!--CONTENEDOR PANEL LATERAL ESTADOS-->
