--- a/Capex.Web/Capex.Web/Views/GestionEnRevision/Index.cshtml
+++ b/Capex.Web/Capex.Web/Views/GestionEnRevision/Index.cshtml
@@ -237,7 +237,7 @@
                         <div class="card-body">
                             <div class="card-title mb-3">
                                 <div class="d-inline-block ml-2">
-                                    <h6>Revisión AMSA</h6><div id="iconFilter"></div>
+                                    <h6>Revisión AMSA @ViewBag.TituloOpcionSeleccionada</h6><div id="iconFilter"></div>
                                 </div>
                             </div>
                             <!--CONTENEDOR PANEL LATERAL ESTADOS-->
