--- a/Capex.Web/Capex.Web/Views/GestionNoAprobada/Index.cshtml
+++ b/Capex.Web/Capex.Web/Views/GestionNoAprobada/Index.cshtml
@@ -158,7 +158,7 @@
     </style>
 </head>
 <body style="overflow: visible;" onload="FNResetear()">
-    <input type="hidden" id="opcionEnviada" name="opcionEnviada" value="@{@Session["CAPEX_SESS_OPCION_ENVIADA"] }">
+    <input type="hidden" id="opcionEnviada" name="opcionEnviada" value="@{@Session["CAPEX_SESS_OPCION_ENVIADA"]}">
     <div id="stars"></div>
     <div id="stars2"></div>
     <!-- Navigation Bar-->
@@ -242,15 +242,15 @@
                                         @{
                                             if (@Session["CAPEX_SESS_OPCION_ENVIADA"] != null && Convert.ToString(@Session["CAPEX_SESS_OPCION_ENVIADA"]) == "1")
                                             {
-                                                <span>No Aprobada GAF</span>
+                                                <span>No Aprobada GAF @ViewBag.TituloOpcionSeleccionada</span>
                                             }
                                             else if (@Session["CAPEX_SESS_OPCION_ENVIADA"] != null && Convert.ToString(@Session["CAPEX_SESS_OPCION_ENVIADA"]) == "2")
                                             {
-                                                <span>No Aprobada C.E.</span>
+                                                <span>No Aprobada C.E. @ViewBag.TituloOpcionSeleccionada</span>
                                             }
                                             else if (@Session["CAPEX_SESS_OPCION_ENVIADA"] != null && Convert.ToString(@Session["CAPEX_SESS_OPCION_ENVIADA"]) == "3")
                                             {
-                                                <span>No Aprobada AMSA</span>
+                                                <span>No Aprobada AMSA @ViewBag.TituloOpcionSeleccionada</span>
                                             }
                                         }
                                     </h6>
