--- a/Capex.Web/Capex.Web/Views/Gestion/ListadoIniciativaAmpliado.cshtml
+++ b/Capex.Web/Capex.Web/Views/Gestion/ListadoIniciativaAmpliado.cshtml
@@ -35,9 +35,9 @@
                             <tr style="@style">
 
                                 <td width="5px">
-                                    <input type="hidden" name=@(String.Format("{0}{1}", "defaultHiddenChecked_", ini.PidId)) value="@(String.Format("{0}{1}", "defaultChecked_", ini.PidId)),@(String.Format("{0}",ini.PidToken))">
+                                    <input type="hidden" name=@(String.Format("{0}{1}", "defaultHiddenChecked_", ini.PidId)) value="@(String.Format("{0}{1}", "defaultChecked_", ini.PidId)),@(String.Format("{0}", ini.PidToken))">
                                     <div class="form-check">
-                                        <input id=@(String.Format("{0}{1}", "defaultChecked_", ini.PidId)) class="styled" type="checkbox" onclick='seleccionarIniciativaPdf("@(String.Format("{0}{1}", "defaultChecked_", ini.PidId))", "@(String.Format("{0}",ini.PidToken))");'>
+                                        <input id=@(String.Format("{0}{1}", "defaultChecked_", ini.PidId)) class="styled" type="checkbox" onclick='seleccionarIniciativaPdf("@(String.Format("{0}{1}", "defaultChecked_", ini.PidId))", "@(String.Format("{0}", ini.PidToken))");'>
                                         <label class="form-check-label" for=@(String.Format("{0}{1}", "defaultChecked_", ini.PidId))></label>
                                     </div>
                                 </td>
@@ -57,11 +57,17 @@
                                     @ini.CatClasificacionSSO
                                 </td>
                                 <td class="text-center" width="140px">
-
-                                    @((string.IsNullOrEmpty(ini.TotalCapex) || ini.TotalCapex.Equals("0")) ? "0" : String.Format("{0:#,##0.##}", double.Parse(ini.TotalCapex, System.Globalization.CultureInfo.GetCultureInfo("es-CL"))))
+                                    @{ if (ViewBag.ENUS != null && !string.IsNullOrEmpty(ViewBag.ENUS.ToString()))
+                                        {
+                                            @((string.IsNullOrEmpty(ini.TotalCapex) || ini.TotalCapex.Equals("0")) ? "0" : String.Format("{0:#,##0.##}", double.Parse(ini.TotalCapex, System.Globalization.CultureInfo.GetCultureInfo("es-CL"))).Replace(',', ':').Replace('.', ',').Replace(':', '.'))
+                                        }
+                                        else
+                                        {
+                                            @((string.IsNullOrEmpty(ini.TotalCapex) || ini.TotalCapex.Equals("0")) ? "0" : String.Format("{0:#,##0.##}", double.Parse(ini.TotalCapex, System.Globalization.CultureInfo.GetCultureInfo("es-CL"))))
+                                        }
+                                    }
                                 </td>
                                 <td class="text-center" width="100px" onclick="exitFilterPanel();FNRegistrarIniciativa('@ini.PidToken')">
-
                                     @Html.Partial("~/Views/Gestion/AccionIniciativa.cshtml", new CapexInfraestructure.Bll.Entities.Planificacion.Identificacion.SharedData { UserOwner = @userOwner, IdAcc = @idAcc })
                                 </td>
                             </tr>
