--- a/Capex.Web/Capex.Web/Views/GestionComentada/Index.cshtml
+++ b/Capex.Web/Capex.Web/Views/GestionComentada/Index.cshtml
@@ -40,21 +40,21 @@
             margin: 1em 0;
         }
 
-            div.pager span {
-                display: inline-block;
-                width: 1.8em;
-                height: 1.8em;
-                line-height: 1.8;
-                text-align: center;
-                cursor: pointer;
-                background: transparent;
-                color: #fff;
-                margin-right: 0.5em;
-            }
+        div.pager span {
+            display: inline-block;
+            width: 1.8em;
+            height: 1.8em;
+            line-height: 1.8;
+            text-align: center;
+            cursor: pointer;
+            background: transparent;
+            color: #fff;
+            margin-right: 0.5em;
+        }
 
-                div.pager span.active {
-                    background: #4a848e;
-                }
+        div.pager span.active {
+            background: #4a848e;
+        }
 
         #menu li {
             padding-top: 4px;
@@ -83,10 +83,10 @@
             position: absolute;
         }
 
-            #menuFilter:hover {
-                transform: rotate(90deg);
-                color: #FF9900;
-            }
+        #menuFilter:hover {
+            transform: rotate(90deg);
+            color: #FF9900;
+        }
 
         #lgMenuFilter {
             width: 300px;
@@ -116,9 +116,9 @@
             -webkit-transition: all 0.25s;
         }
 
-            #exitFilter:hover {
-                color: #FF9900;
-            }
+        #exitFilter:hover {
+            color: #FF9900;
+        }
 
         #lgMenuFilter.enter {
             opacity: 1;
@@ -147,16 +147,17 @@
             text-shadow: 0px 1px 0px #2f6627;
         }
 
-            .myButtonXls:hover {
-                background-color: #5cbf2a;
-                color: #000000;
-            }
+        .myButtonXls:hover {
+            background-color: #5cbf2a;
+            color: #000000;
+        }
 
-            .myButtonXls:active {
-                position: relative;
-                top: 1px;
-                color: #000000;
-            }
+        .myButtonXls:active {
+            position: relative;
+            top: 1px;
+            color: #000000;
+        }
+
     </style>
 </head>
 <body style="overflow: visible;" onload="FNResetear()">
@@ -211,7 +212,7 @@
                     </div>
                 </div>
             </div>
-
+           
             <div class="row">
                 <div class="col-12">
                     <div class="card mail-inbox">
@@ -373,7 +374,15 @@
                                                                         @ini.MacroCategoria
                                                                     </td>
                                                                     <td class="text-center" width="140px">
-                                                                        @((string.IsNullOrEmpty(ini.TotalCapex) || ini.TotalCapex.Equals("0")) ? "0" : String.Format("{0:#,##0.##}", double.Parse(ini.TotalCapex, System.Globalization.CultureInfo.GetCultureInfo("es-CL"))))
+                                                                        @{ if (ViewBag.ENUS != null && !string.IsNullOrEmpty(ViewBag.ENUS.ToString()))
+                                                                            {
+                                                                                @((string.IsNullOrEmpty(ini.TotalCapex) || ini.TotalCapex.Equals("0")) ? "0" : String.Format("{0:#,##0.##}", double.Parse(ini.TotalCapex, System.Globalization.CultureInfo.GetCultureInfo("es-CL"))).Replace(',', ':').Replace('.', ',').Replace(':', '.'))
+                                                                            }
+                                                                            else
+                                                                            {
+                                                                                @((string.IsNullOrEmpty(ini.TotalCapex) || ini.TotalCapex.Equals("0")) ? "0" : String.Format("{0:#,##0.##}", double.Parse(ini.TotalCapex, System.Globalization.CultureInfo.GetCultureInfo("es-CL"))))
+                                                                            }
+                                                                        }
                                                                     </td>
                                                                     <td class="text-center" width="100px" onclick="exitFilterPanel();FNRegistrarIniciativa('@ini.PidToken')">
                                                                         @if (Convert.ToString(@Session["CAPEX_SESS_ROLNOMBRE"]) == "Gestor")
